--- a/inicio.html
+++ b/inicio.html
@@ -19,11 +19,11 @@
     <header class="cabecera">
         <div class="cab_nav">
 			<ul>
-				<li><a href="#">Calendario</a></li>
-				<li><a href="#">Compatibilidad</a></li>
-				<li><a href="#">Videos</a></li>
-				<li><a href="#">Secretos</a></li>
-				<li><a href="#">Predicciones</a></li>
+				<li><a href="Calendario.html">Calendario</a></li>
+				<li><a href="Compatibilidad.html">Compatibilidad</a></li>
+				<li><a href="Videos.html">Videos</a></li>
+				<li><a href="Secretos.html">Secretos</a></li>
+				<li><a href="Predicciones.html">Predicciones</a></li>
 			</ul>
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=61557965552282&mibextid=ZbWKwL" class="social-media-icon">
