--- a/inicio.html
+++ b/inicio.html
@@ -19,17 +19,17 @@
     <header class="cabecera">
         <div class="cab_nav">
 			<ul>
-				<li><a href="Calendario.html">Calendario</a></li>
-				<li><a href="Compatibilidad.html">Compatibilidad</a></li>
-				<li><a href="Videos.html">Videos</a></li>
-				<li><a href="Secretos.html">Secretos</a></li>
-				<li><a href="Predicciones.html">Predicciones</a></li>
+				<li><a href="Calendario.html" target='_blank'>Calendario</a></li>
+				<li><a href="Compatibilidad.html" target='_blank'>Compatibilidad</a></li>
+				<li><a href="Videos.html" target='_blank'>Videos</a></li>
+				<li><a href="Secretos.html" target='_blank'>Secretos</a></li>
+				<li><a href="Predicciones.html" target='_blank'>Predicciones</a></li>
 			</ul>
             <div class="social-media">
-                <a href="https://www.facebook.com/profile.php?id=61557965552282&mibextid=ZbWKwL" class="social-media-icon">
+                <a href="https://www.facebook.com/profile.php?id=61557965552282&mibextid=ZbWKwL" target='_blank' class="social-media-icon">
                     <i class='bx bxl-facebook'></i>
                 </a>
-                <a href="https://www.instagram.com/maxi_lop912?igsh=NGlvM2lqcm10cHU5" class="social-media-icon">
+                <a href="https://www.instagram.com/maxi_lop912?igsh=NGlvM2lqcm10cHU5" target='_blank' class="social-media-icon">
                     <i class='bx bxl-instagram' ></i>
                 </a>
             </div>
